[bugfix] fixes bugs with text overflow and custom button

--- a/washondemand/www/css/style.css
+++ b/washondemand/www/css/style.css
@@ -20,8 +20,12 @@ ng-map {
   margin-right: 5px;
 }
 
-#premium-btn {
-  text-overflow: clip;
+.clip-text {
+  text-overflow: clip !important;
+}
+
+.overflow-text {
+  white-space: normal;
 }
 
 .label {
